codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_app.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 2 },
    content: [
        "› /app      continue this session in the Desktop app                    ",
        "  /approve  approve one retry of a recent auto-review denial            ",
    ],
    styles: [
        x: 0, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 6, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
