codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_default_items.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: commands
---
/model - choose what model and reasoning effort to use
/provider - choose which model provider to use
/ide - include current selection, open files, and other context from your IDE
/permissions - choose what Codex is allowed to do
/keymap - remap TUI shortcuts
/vim - toggle Vim mode for the composer
/experimental - toggle experimental features
/approve - approve one retry of a recent auto-review denial
/memories - configure memory use and generation
/skills - use skills to improve how Codex performs specific tasks
/import - import setup, this project, and recent chats from Claude Code
/hooks - view and manage lifecycle hooks
/review - review my current changes and find issues
/rename - rename the current thread
/new - start a new chat during a conversation
/archive - archive this session
/delete - permanently delete this session
/resume - resume a saved chat
/fork - fork the current chat
/app - continue this session in the Desktop app
/init - create an AGENTS.md file with instructions for Codex
/compact - summarize conversation to prevent hitting the context limit
/recap - summarize the current conversation now
/agents - view and switch between all active agent sessions
/side - start a side conversation in an ephemeral fork
/copy - copy the last response or part of it
/export - export the conversation as markdown
/raw - toggle raw scrollback mode for copy-friendly terminal selection
/diff - show git diff (including untracked files)
/mention - mention a file
/status - show current session configuration and token usage
/cd - change the current working directory
/pwd - show the current working directory
/title - configure which items appear in the terminal title
/statusline - configure which items appear in the status line
/theme - choose a syntax highlighting theme
/pets - choose or hide the terminal pet
/mcp - list configured MCP tools; use /mcp verbose for details
/logout - log out of Codex
/exit - exit Codex
/feedback - send logs to maintainers
/rollout - print the rollout file path
/ps - list background terminals
/stop - stop all background terminals
/clear - clear the terminal and start a new chat
/test-approval - test approval request
/subagents - switch between this session's subagents
