codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_filter_reset_after_scroll.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 3 },
    content: [
        "› /status      show current session configuration and token usage       ",
        "  /statusline  configure which items appear in the status line          ",
        "  /stop        stop all background terminals                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 9, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
